# loopmaxxer-bench

./: .gitignore  AGENTS.md  README.md  ci_reviewer.py  rule.json
.github/workflows/: ci_reviewer.yml  gatekeeper.yml  guardian.yml  verify-pr.yml
escher/: AGENTS.md  Dockerfile  GOAL.md  ci_reviewer.py  generate_tasklist.py  inspect_headers.py  inspect_parts.py  proxy.py  start.sh  verify_pairs.py  verify_xml.py
market-making/: Cargo.toml  Dockerfile.dev  PLAN.md  README.md  TASKLIST.md  docker-compose.yml  korean-order-book-spec.md
market-making/.devcontainer/: devcontainer.json
market-making/benches/: hot_path.rs
market-making/docs/issues/: implement-korean-order-book-spec.md
market-making/src/: bookmaker.rs  lib.rs  m  main.rs  ofi.rs  portfolio.rs  pricer.rs  risk_gate.rs  simulation.rs  sofr.rs  symbology.rs  vol_surface.rs
market-making/src/clearing/: cmta.rs  margin_sweep.rs  mod.rs
market-making/src/codec/: fix_template.rs  mod.rs  sbe_encoder.rs
market-making/src/dropcopy/: listener.rs  mod.rs
market-making/src/gmm/: em.rs  features.rs  mod.rs  model.rs
market-making/src/hedging/: mod.rs  router.rs
market-making/src/iex/: downloader.rs  mod.rs  parser.rs
market-making/src/ingestion/: dma_buffer.rs  driver.rs  ef_vi.rs  mod.rs  numa.rs  spider_stream.rs
market-making/src/margin/: mod.rs  tims.rs
market-making/src/memorydb/: client.rs  mod.rs  vector_store.rs
market-making/src/mle/: likelihood.rs  mod.rs  position.rs
market-making/src/orchestrator/: live_tick.rs  mod.rs  orchestrator.rs
market-making/src/purge/: cob_defense.rs  mod.rs  sqf_driver.rs
market-making/src/recorder/: mapped_writer.rs  mod.rs
market-making/src/term_structure/: estimator.rs  mod.rs
market-making/tests/: integration_test.rs
selinux/: AGENTS.md  GOAL.md
skills/: gemini-interactions-api  gemini-interactions-api.md
skills/gemini-interactions-api/: SKILL.md
skills/gemini-interactions-api/references/: agent-environment.md  antigravity-agent  custom-agents.md  deep-research.md  managed-agents.md
skills/loop-engineer/: SKILL.md
skills/pr-fix-test-engineer/: SKILL.md
skills/pr-fix-verifier/: SKILL.md
skills/rust-github-actions/: SKILL.md
tests/: test_task_1.py
