[package]
name = "mr_market"
version = "0.1.0"
edition = "2021"
description = "SOFR-neutral multi-asset market-making framework (Korean Order Book Spec)"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
crossbeam-queue = "0.3"
ndarray = { version = "0.15", features = ["rayon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.12", features = ["blocking"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.10"
libc = "0.2"
core_affinity = "0.8"

[dev-dependencies]
criterion = "0.5"

[features]
default = []
# Solarflare EF_VI userspace driver FFI (Linux only, requires libonload)
ef_vi = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
# Spec §16.1: enable native CPU intrinsics for FMA/AVX-512 auto-vectorization
# Build with: RUSTFLAGS="-C target-cpu=native" cargo build --release

[[bench]]
name = "hot_path"
harness = false

[[bin]]
name = "mr-market"
path = "src/main.rs"
